Fixed bug where user profiles were appearing over the new message pop ups, distorting the view. Also added more padding to friends icon list in the home page

--- a/src/pages/home/friendicons/FriendIcons.css
+++ b/src/pages/home/friendicons/FriendIcons.css
@@ -2,12 +2,9 @@
   list-style: none;
   white-space: nowrap;
   overflow-x: scroll;
-  /* scrollbar-width:none; */
   padding-top: 1.5em;
+  padding-bottom: .5em;
   position: relative;
-  /* height: 100%; */
-  /* display:flex;
-  justify-content: center; */
   scrollbar-color: blue;
 }
 
